# sophistry-bench

./: .gitignore  LICENSE  README.md  conftest.py  prime.toml  pyproject.toml  sprint-config.toml
.github/workflows/: ci.yml
artifacts/: dpo_pairs_pol.summary.txt  dpo_runs.txt  leaderboard_pol_after.json  leaderboard_pol_before.json  leaderboard_pol_diff.txt
artifacts/hf_dataset/: README.md
artifacts/hf_dataset/data/: dev.parquet
docs/: khan-et-al-faithfulness.md  reward-hacking.md
environments/sophistry_bench/: pyproject.toml  sophistry_bench_env.py  tests_public_api.py
environments/sophistry_bench_sprint/: README.md  pyproject.toml  sophistry_bench_sprint.py  tests_public_api.py
scripts/: build_hf_dataset.py  compare.py  demo.py  finetune.py  generate_dpo_pairs.py  head_to_head.py  run_eval.py  sprint_smoke_test.py  upload_hf_dataset.py
src/sophistry_bench/: __init__.py  agents.py  dataset.py  environment.py  eval.py  parser.py  train.py  vf_env.py
src/sophistry_bench/data/: quality_dev.json
src/sophistry_bench/rubric/: __init__.py  aggregate.py  citation_bluffing.py  correctness.py  false_confidence.py  gish_gallop.py  goalpost.py  reframing.py  sycophantic.py
src/sophistry_bench/sprint/: __init__.py  env.py
tests/: test_agents.py  test_aggregate.py  test_citation_bluffing.py  test_correctness.py  test_dataset.py  test_environment.py  test_eval.py  test_false_confidence.py  test_finetune_format.py  test_gish_gallop.py  test_goalpost.py  test_parser.py  test_reframing.py  test_sprint_env.py  test_sycophantic.py  test_train.py
tests/fixtures/: mock_clients.py  quality_sample.json  transcripts.py
