[project]
name = "sophistry-bench"
version = "0.1.0"
description = "RL environment for asymmetric-info debate with sophistry-decomposed verifier"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=0.2",
    "datasets>=2.20",
    "pydantic>=2.7",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "tenacity>=8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real APIs (requires RUN_INTEGRATION=1)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
