[project]
name = "sophistry-bench"
version = "0.1.0"
description = "RL environment for asymmetric-info debate with sophistry-decomposed verifier"
requires-python = ">=3.11"
keywords = ["debate", "multi-agent", "rubric", "rl-environment", "verifiers", "QuALITY"]
dependencies = [
    "anthropic>=0.40",
    "datasets>=2.20",
    "google-genai>=0.2",
    "numpy>=1.26",
    "openai>=1.50",
    "pydantic>=2.7",
    "sentence-transformers>=3.0",
    "tenacity>=8.5",
    "verifiers>=0.1.5",
]

[project.urls]
Homepage = "https://github.com/acharyaanusha/sophistry-bench"
Repository = "https://github.com/acharyaanusha/sophistry-bench"
Issues = "https://github.com/acharyaanusha/sophistry-bench/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real APIs (requires RUN_INTEGRATION=1)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*", "verifiers", "verifiers.*"]
ignore_missing_imports = true
