[project]
name = "sophistry-bench"
version = "0.1.15"
description = "RL environment for asymmetric-info debate with sophistry-decomposed verifier"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Anusha Acharya", email = "acharyaanusha123@gmail.com" }]
keywords = ["debate", "multi-agent", "rubric", "rl-environment", "verifiers", "QuALITY"]
tags = ["train", "eval", "multi-agent", "scalable-oversight", "debate", "reasoning", "alignment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40",
    "datasets>=2.20",
    "google-genai>=0.2",
    "numpy>=1.26",
    "openai>=1.50",
    "pydantic>=2.7",
    "tenacity>=8.5",
    "verifiers>=0.1.5",
]

[project.urls]
Homepage = "https://github.com/acharyaanusha/sophistry-bench"
Repository = "https://github.com/acharyaanusha/sophistry-bench"
Issues = "https://github.com/acharyaanusha/sophistry-bench/issues"

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.10",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sophistry_bench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real APIs (requires RUN_INTEGRATION=1)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*", "verifiers", "verifiers.*"]
ignore_missing_imports = true
