[project]
name = "sophistry-bench-sprint"
description = "Single-agent advocacy variant of sophistry-bench for the Prime Intellect Reward Hacking Sprint. Pre-registered hypothesis: training Llama-3.2-1B on a programmatic claim-count cliff (peak at n=8) will cause cliff convergence within 100 GRPO steps; three adversarial canary rewards detect format-hacking. Self-contained (vendored from sophistry-bench v0.1.19) — no runtime dependency on the main package, to work around PI training-infra's exclude-newer index filter."
tags = ["train", "eval", "reward-hacking", "sprint", "alignment", "scalable-oversight", "single-agent", "advocacy", "debate"]
version = "0.1.5"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
    "pydantic>=2.0",
    "datasets>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sophistry_bench_sprint.py", "pyproject.toml", "quality_dev.json"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
